begin login and register with accesstoken base and fresh token along hashing role

--- a/backend/.env
+++ b/backend/.env
@@ -7,4 +7,10 @@ BN_PORT=8000
 FN_PORT=3000
 BN_HOST=localhost
 
-SECRET_KEY=Nate193
+# SECRET_KEY=Nate193
+
+JWT_SECRET=Nate193
+JWT_REFRESH_SECRET=Nate193SECRET
+JWT_EXPIRATION=15m
+JWT_REFRESH_EXPIRATION=7d
+NODE_ENV=development
