Add registration for seller and complete all register roll include change passwordd feature

--- a/backend/.env
+++ b/backend/.env
@@ -14,3 +14,17 @@ JWT_REFRESH_SECRET=Nate193SECRET
 JWT_EXPIRATION=15m
 JWT_REFRESH_EXPIRATION=7d
 NODE_ENV=development
+
+# Seed
+SEED_PASS=Password123_
+
+# Send email
+EMAIL=devcheeky23@gmail.com
+EMAIL_PASSWORD=nzjg subr efnq xbnq
+
+# Encryption
+ENCRYPTION_KEY=Alice3394856_
+
+# Frontend
+F_HOST=localhost
+F_PORT=3000
